Adjusted font styles and adjusted home page text and graphics

--- a/packages/docs/pages/index.mdx
+++ b/packages/docs/pages/index.mdx
@@ -1,13 +1,35 @@
 # GrowthBook Docs
 
-![GrowthBook: The Open Source A/B Testing Platform](/images/hero.png)
+GrowthBook is an open-source platform for feature flagging and a/b testing built for data teams, engineers, and product managers.
+It's great whether you're looking to just analyze experiment results or looking to make it easier to deploy code.
 
-## Our Philosophy
+<div class="bg-blue-50 py-3 px-4 font-semibold text-gray-600 border-l-8 border-blue-200">
+  Got questions? We would love to help you get started with GrowthBook. You can
+  book time directly with us, or chat to us on slack
+  <br />
+  <br />
+  <a href="https://calendly.com/growthbook" class="mr-2">
+    Meet with us
+  </a>
+  or
+  <a
+    href="https://join.slack.com/t/growthbookusers/shared_invite/zt-oiq9s1qd-dHHvw4xjpnoRV1QQrq6vUg"
+    class="ml-2 mr-2"
+  >
+    Join our Slack
+  </a>
+</div>
 
-The top 1% of companies spend thousands of hours building their own A/B testing platforms in-house.
-The other 99% are left paying for expensive 3rd party SaaS tools or hacking together unmaintained open source libraries.
+![GrowthBook: The Open Source A/B Testing Platform](/images/feature-flagging-experimentation-diagram-766.png)
 
-GrowthBook gives you the flexibility and power of a fully-featured in-house A/B testing platform without needing to build it yourself.
+## Our Mission
+
+Companies spend thousands of hours building internal tools for feature flagging and experimentation (A/B testing).
+They do this in part because they want to run these systems on their own infrastructure, using their own data, and have them deeply integrated into their code.
+
+GrowthBook gives data, engineering, and product teams the power of a customizable platform without needing to build it yourself.
+
+We believe that **feature flagging** is the best way to deploy features and easily adopt an experimentation culture.
 
 We believe A/B testing should sit on top of your **existing data and metrics**, wherever they live and however they are defined.
 
@@ -15,7 +37,7 @@ We believe in **data transparency**. You can export results as a Jupyter noteboo
 
 We are fanatical about **performance**. Our [SDKs](/lib) are crazy fast and light-weight and evaluate everything locally with no network requests.
 
-We believe good ideas come from everywhere. GrowthBook gives you **access controls** and guardrails to safely open up A/B testing to your entire organization.
+We believe good ideas come from everywhere. GrowthBook gives you feature flags so its easy to **test everything** and make experimentation part of your process.
 
 ## Documentation
 
