--- a/packages/docs/pages/index.mdx
+++ b/packages/docs/pages/index.mdx
@@ -3,7 +3,7 @@
 GrowthBook is an open-source platform for feature flagging and a/b testing built for data teams, engineers, and product managers.
 It's great whether you're looking to just analyze experiment results or looking to make it easier to deploy code.
 
-<div class="bg-blue-50 py-3 mb-4 px-4 font-semibold text-gray-600 border-l-8 border-blue-200 dark:bg-blue-800 dark:text-gray-50">
+<div class="bg-blue-50 py-3 mb-5 px-4 font-semibold text-gray-600 border-l-8 border-blue-200 dark:bg-blue-800 dark:text-gray-50">
   Got questions? We would love to help you get started with GrowthBook. You can
   book time directly with us, or chat to us on slack
   <br />
@@ -28,7 +28,7 @@ It's great whether you're looking to just analyze experiment results or looking 
   </a>
   <a href="/lib" class="no-underline" style={{ textDecoration: "none" }}>
     <div class="p-4 rounded-lg text-white bg-gradient-to-b from-purple-400 to-purple-500 no-underline text-center">
-      Software Development Kits
+      SDK Docs
     </div>
   </a>
   <a href="/faq" class="no-underline" style={{ textDecoration: "none" }}>
