--- a/packages/docs/pages/self-host/config.mdx
+++ b/packages/docs/pages/self-host/config.mdx
@@ -329,7 +329,9 @@ userIdType: "user" # or "anonymous" or "either"
 # Any user with a higher metric amount will be capped at this value
 # In this case, if someone bought a $10,000 order, it would only be counted as $100
 cap: 100
-# Hours the user has to convert on this metric after being put in an experiment
+# Ignore all conversions within the first X hours of being put into an experiment.
+conversionDelayHours: 0
+# After the conversion delay (if any), wait this many hours for a conversion event.
 conversionWindowHours: 72
 # The risk thresholds for the metric.
 # If risk < $winRisk, it is highlighted green.
