Update logos in readme and email template, update docs

--- a/packages/docs/pages/app/features.mdx
+++ b/packages/docs/pages/app/features.mdx
@@ -62,7 +62,7 @@ growthbook.setAttributes({
 });
 ```
 
-And this is what it looks like in the GrowthBook App to list them:
+You can update the attributes in the GrowthBook App under **Settings** > **Attributes**:
 
 ![List of targeting attributes](/images/edit-targeting-attributes.png)
 
