Fix link to stats whitepaper

--- a/packages/docs/pages/statistics.mdx
+++ b/packages/docs/pages/statistics.mdx
@@ -1,7 +1,7 @@
 # GrowthBook's Statistics
 
 This page is a summary verison of the statistical methods used by GrowthBook. If you
-want to read more detail, you can see the [full white paper PDF](https://www.growthbook.io/docs/GrowthBookStatsEngine.pdf).
+want to read more detail, you can see the [full white paper PDF](/GrowthBookStatsEngine.pdf).
 
 ## Bayesian Statistics
 
@@ -95,4 +95,4 @@ GrowthBook utilizes a combination of Bayesian statistics, fast estimation techni
 and data quality checks to robustly analyze A/B tests at scale and provide intuitive
 results to decision makers. The implementation is fully open source under an MIT license
 and available on GitHub. You can also read more about the statistics and equations used
-in the [white paper PDF](https://www.growthbook.io/docs/GrowthBookStatsEngine.pdf).
+in the [white paper PDF](/GrowthBookStatsEngine.pdf).
